# jupedsim

./: .clang-tidy  AGENTS.md  Analysis_CG.md  Analysis_NS.md  CMakeLists.txt  distance_gt.py  grid_traversal_algorithms.md  my_data.csv  suggestions.md
.github/workflows/: cibuildwheel.yml
container/perf-measurement/: Dockerfile  README.md  container_perf_test.py
jps-ui/: CMakeLists.txt
jps-ui/src/: app_state.hpp  gui.cpp  gui.hpp  main.cpp  mesh.cpp  mesh.hpp  ortho_camera.cpp  ortho_camera.hpp  path.cpp  path.hpp  rendering_mesh.cpp
libdistance/src/: common_types.hpp  grid.hpp  raster_map.hpp
libdistance/test/: TestDistanceMap.cpp
libpolyanya/: CMakeLists.txt
libpolyanya/src/: mesh.cpp  mesh.h
libsimulator/: CMakeLists.txt
libsimulator/benchmark/: benchmarkLineSegment.hpp
libsimulator/src/: AABB.cpp  AABB.hpp  AgentRemovalSystem.hpp  CfgCgal.hpp  CollisionGeometry.cpp  CollisionGeometry.hpp  Ellipse.cpp  GenericAgent.hpp  GeometricFunctions.hpp  GeometryBuilder.cpp  GeometryBuilder.hpp  GeometrySwitchError.hpp  Graph.hpp  IteratorPair.hpp  Journey.hpp  LineSegment.cpp  LineSegment.hpp  Logger.cpp  Logger.hpp  Mesh.cpp  Mesh.hpp  NeighborhoodSearch.hpp  OperationalDecisionSystem.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Routing.cpp  RoutingEngine.cpp  RoutingEngine.hpp  Simulation.cpp  Simulation.hpp  SimulationClock.cpp  SimulationClock.hpp  Stage.cpp  Stage.hpp  StageDescription.hpp  StageManager.hpp  StageSystem.hpp  StrategicalDesicionSystem.hpp  (+7 more)
libsimulator/test/: TestAABB.cpp  TestCollisionGeometry.cpp  TestCustomModel.cpp  TestGenericAgentFormatter.cpp  TestGraph.cpp  TestNeighborhoodSearch.cpp  TestSimulationClock.cpp  TestStage.cpp  TestUniqueID.cpp
python_bindings_distance/: CMakeLists.txt  bindings_distance.cpp
python_bindings_jupedsim/: CMakeLists.txt  agent.cpp  anticipation_velocity_model.cpp  build_info.cpp  collision_free_speed_model.cpp  collision_free_speed_model_v2.cpp  collision_free_speed_model_v3.cpp  conversion.cpp  conversion.hpp  generalized_centrifugal_force_model.cpp  geometry.cpp  journey.cpp  linesegment.cpp  logging.cpp  logging.hpp  python_model.cpp  routing.cpp  simulation.cpp  social_force_model.cpp  stage.cpp  trace.cpp  transition.cpp  transition_description_wrapper.hpp  warp_driver_model.cpp
python_bindings_jupedsim/UserDefinedModel/: PythonModel.hpp
python_bindings_jupedsim_v2/: CMakeLists.txt  agent.cpp  conversion.cpp  conversion.hpp  logging.cpp  simulation.cpp
scripts/ci/: check_format.sh
tools/: CMakeLists.txt
(+66 files in other folders)
